--- a/index.css
+++ b/index.css
@@ -1,5 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=SUSE:wght@100..800&display=swap');
+
+*{
+    font-family: "SUSE", sans-serif;
+}
 body{
     background-image: url('./assets/bg3.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    background-color: #000;
+    top: 0;
+    left: 0;
 }
